[package]
name = "gpu"
version = "0.1.0"
edition = "2024"

[dependencies]
csv = "1.4.0"
memory = { path = "../memory" }
nvtypes = { path = "../nvtypes" }
once_cell = "1.21.4"
utils = { path = "../utils" }
serde = {version="1.0.228", features = ["derive"]}
indicatif = "0.18.4"
warp_scheduler = { path = "../warp_scheduler" }
